@@ -1,7 +1,7 @@
 """
 Views for testing notifications. Should not be present in production
 """
-
+from django.conf import settings
 from django.http import HttpResponse
 from django.views.generic import TemplateView, View
 
@@ -44,4 +44,7 @@ class TestNotification(View):
 
         content = obj.render(render_type, context)
 
-        return HttpResponse(content, content_type='text/{}'.format(render_type))
+        render_type = "plain" if render_type == "text" else render_type
+        charset = settings.DEFAULT_CHARSET
+
+        return HttpResponse(content, content_type='text/{}; charset={}'.format(render_type, charset))
