@@ -1,10 +1,13 @@
 from email.mime.image import MIMEImage
 
+from django.core.files import File
+
 from herald import registry
 from herald.base import EmailNotification
 from herald.base import TwilioTextNotification
 
 
+@registry.register
 class MyNotification(EmailNotification):
     context = {'hello': 'world'}
     template_name = 'hello_world'
@@ -24,21 +27,31 @@ class MyNotification(EmailNotification):
             img,
         ]
 
-registry.register(MyNotification)
 
-
+@registry.register
 class MyOtherNotification(EmailNotification):
     context = {'hello': 'world'}
     template_name = 'hello_world'
     to_emails = ['test@test.com']
 
-registry.register(MyOtherNotification)
 
-
+@registry.register
 class MyTwilioNotification(TwilioTextNotification):
     context = {'hello': 'world'}
     template_name = 'hello_world'
     to_emails = ['test@test.com']
 
 
-registry.register(MyTwilioNotification)
+@registry.register
+class MyNotificationAttachmentOpen(EmailNotification):
+    context = {'hello': 'world'}
+    template_name = 'hello_world'
+    to_emails = ['test@test.com']
+
+    def get_attachments(self):
+        with open('tests/python.jpeg', 'rb') as f:
+            img = File(f)
+
+        img2 = File(open('tests/python.jpeg', 'rb'))
+
+        return [img, img2]
